--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "foras"
-version = "0.0.5"
+version = "0.4.0"
 edition = "2024"
 authors = ["CryptoPatrick <cryptopatrick@gmail.com>"]
 
 ###############################################################################
-description = "First-Order Reasoner"
+description = "foras is a First-Order Reasoner which uses the principles of predicate logic to derive new facts, verify statements, and prove theorems from an existing knowledge base."
 documentation = "https://docs.rs/foras"
 homepage = "https://github.com/cryptopatrick/foras"
 repository = "https://github.com/cryptopatrick/foras"
@@ -19,10 +19,35 @@ autotests = false
 name = "foras"
 path = "src/lib.rs"
 
+[[bin]]
+name = "foras"
+path = "src/main.rs"
+
+[[bin]]
+name = "regression"
+path = "src/bin/regression.rs"
+
+[[bin]]
+name = "regression_worker"
+path = "src/bin/regression_worker.rs"
+
+[[bin]]
+name = "regression_parallel"
+path = "src/bin/regression_parallel.rs"
+
 [[test]]
 name = "tests"
 path = "tests/test.rs"
 
+[[test]]
+name = "smoke_tests"
+path = "tests/smoke_tests.rs"
+
 ###############################################################################
 [dependencies]
 scryer-prolog = "0.10.0"
+sysinfo = "0.30"
+wait-timeout = "0.2"
+num_cpus = "1.16"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
